<resources>
    <string name="app_name">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="synopsis">Plot Synopsis</string>
    <string name="rating">Average Rating</string>
    <string name="release_date">Release Date</string>
    <string name="loading">Loading&#8230;</string>
    <string name="favourite">Favourites</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="star">Star</string>
    <string name="dummy_name">Amazing Movie</string>
    <string name="dummy_rating">100</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="favourite_movies">Favourite Movies</string>
</resources>
